# remote-juggler

./: .bazelignore  .bazelrc  .gitignore  .gitlab-ci.yml  .mcp.json  .outbot.yml  .sops.yaml  BUILD.bazel  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODULE.bazel  Makefile  Mason.toml  README.md  acp.json  flake.nix  install.sh  justfile  mkdocs.yml  pytest.ini  renovate.json  server.json
.claude/: CLAUDE.md  settings.json
.github/: NIX_CI_SETUP.md  dependabot.yml
Formula/: README.md  remote-juggler.rb
agent_plane/: EPIC.md  progress.md  research_notes.md  week1-2_tool_invocation.md  week3-4_agent_communications.md  week5-6_self_evolution.md  ws1-tinyclaw-rename.md  ws2-security-remediation.md  ws3-a2a-discussion-tools.md  ws4-litellm-evaluation.md  ws5-agent-remediation.md
assets/: AppIcon.icns
c_src/: hsm.c  hsm.h  hsm_secure_enclave.c  hsm_secure_enclave.h  hsm_tpm.c  hsm_tpm.h  keychain.c  keychain.h  keychain_darwin.c  keychain_stub.c
ci/: gitlab-nix.yml
completions/: _remote-juggler  remote-juggler.bash  remote-juggler.fish
deploy/: demo.sh  gateway-config.example.json  tailscale-acl-grants.hujson
docs/: .htmltest.yml  CI_VARIABLES.md  Containerfile  DISTRIBUTION.md  FIRST_TIME_SETUP.md  NIX_CHAPEL_SETUP.md  ROADMAP_8WEEK.md  TRUSTED_WORKSTATION_SETUP.md  docker-compose.yml  gitlab-switch.md  index.md  install.md  token-expiry-detection.md
examples/: README.md  config-enterprise.json  config-minimal.json  config-multi-provider.json  config-trusted-workstation.json  fish-functions.fish  github-actions-example.yml  gitlab-ci-example.yml  shell-aliases.sh  ssh-config-example
gateway/: .gitignore  BUILD.bazel  Dockerfile  aperture.go  aperture_s3.go  aperture_s3_test.go  aperture_sse.go  aperture_sse_test.go  aperture_test.go  aperture_webhook.go  aperture_webhook_test.go  audit_s3.go  audit_s3_test.go  campaign_tools.go  campaigns.go  campaigns_test.go  config.go  config_test.go  github_app.go  github_app_test.go  github_discussion_tools.go  github_discussion_tools_test.go  github_tools.go  github_tools_test.go  go.mod  go.sum  identity.go  main.go  mcp_proxy.go  metering.go  metering_test.go  portal.go  portal.html  resolver.go  resolver_test.go  setec_client.go  tools.go  tools_test.go
gtk-gui/: BUILD.bazel  Cargo.toml  README.md
gtk-gui/data/: dev.tinyland.RemoteJuggler.desktop  dev.tinyland.RemoteJuggler.metainfo.xml  dev.tinyland.RemoteJuggler.service
gtk-gui/src/: config.rs  config_properties.rs  main.rs  window.rs
gtk-gui/tests/: integration_test.rs
homebrew-tap/: README.md
hooks/: install.sh  pre-commit
nix/: chapel-fhs.nix  chapel.nix  homeManagerModule.nix
npm/: .gitignore  README.md  package.json
packaging/: Info.plist  LaunchAgent.plist  autostart.desktop  (+2 more)
pinentry/: BUILD.bazel  Makefile  README.md  hsm.h  hsm_darwin.c  hsm_linux.c  hsm_stub.c  pinentry-remotejuggler.py  test_hsm.c  test_hsm_integration.sh
src/: BUILD.bazel  remote_juggler.chpl
src/remote_juggler/: ACP.chpl  Config.chpl  Core.chpl  GPG.chpl  GPGAgent.chpl  GlobalConfig.chpl  HSM.chpl  Identity.chpl  KeePassXC.chpl  Keychain.chpl  MCP.chpl  Protocol.chpl  ProviderCLI.chpl  Remote.chpl  Setup.chpl  State.chpl  TokenHealth.chpl  Tools.chpl  TrustedWorkstation.chpl  YubiKey.chpl
test/: BUILD.bazel
test/campaigns/: index.json  schema.json
test/campaigns/claude-code/: cc-config-sync.json  cc-cred-resolution.json  cc-gateway-health.json  cc-identity-switch.json  cc-mcp-regression.json
test/campaigns/cross-agent/: xa-acl-enforcement.json  xa-audit-completeness.json  xa-cred-lifecycle.json  xa-finding-handoff.json  xa-fork-health.json  xa-identity-audit.json  xa-platform-health.json  xa-provision-agent.json  xa-token-budget.json  xa-upstream-drift.json
test/campaigns/gateway-direct/: cc-config-sync.json  cc-cred-resolution.json  cc-cron-monitor.json  cc-gateway-health.json  cc-identity-switch.json  cc-mcp-regression.json  cc-stale-issues.json
test/campaigns/hexstrike/: hs-container-vuln.json  hs-cred-exposure.json  hs-cve-monitor.json  hs-dep-vuln.json  hs-gateway-pentest.json  hs-handoff-response.json  hs-network-posture.json  hs-sops-rotation.json
test/campaigns/openclaw/: oc-a11y-check.json  oc-codeql-fix.json  oc-coverage-gaps.json  oc-credential-health.json  oc-dead-code.json  oc-dep-audit.json  oc-docs-freshness.json  oc-fork-review.json  oc-gateway-smoketest.json  oc-handoff-response.json  oc-identity-audit.json  oc-infra-review.json  oc-issue-triage.json  oc-license-scan.json  oc-prompt-audit.json  oc-secret-request.json  oc-self-evolve.json  oc-token-budget.json  oc-ts-package-audit.json  oc-ts-strict.json  oc-upstream-sync.json  oc-weekly-digest.json  oc-wiki-update.json
test/campaigns/picoclaw/: pc-credential-health.json  pc-identity-audit.json  pc-self-evolve.json  pc-ts-package-scan.json  pc-upstream-sync.json
test/campaigns/runner/: Dockerfile  api.go  api_test.go  campaign.go  collector.go  contract_test.go  dispatcher.go  e2e_test.go  feedback.go  feedback_test.go  github_app.go  github_app_test.go  go.mod  main.go  publisher.go  publisher_test.go  router.go  router_test.go  runner_test.go  scheduler.go  webhook_test.go
test/campaigns/tinyclaw/: pc-credential-health.json  pc-identity-audit.json  pc-self-evolve.json  pc-ts-package-scan.json  pc-upstream-sync.json
test/e2e/: BUILD.bazel  conftest.py  requirements.txt  test_campaigns_cluster.sh  test_hsm_workflow.py  test_install_methods.py  test_installation.py  test_mcp_tools.py  test_secure_enclave.py  test_tpm.py
test/fixtures/: mock-age  mock-age-keygen  mock-sops  mock-ykman
test/integration/: test_trusted_workstation.sh
test/unit/: ConfigTests.chpl  CoreTests.chpl  IdentityTests.chpl  KeePassXCE2ETests.chpl  KeePassXCTests.chpl  RemoteTests.chpl  ToolsKdbxTests.chpl
tray/: BUILD.bazel
tray/darwin/: BUILD.bazel  Package.swift
tray/darwin/Sources/: IdentityManager.swift  RemoteJugglerApp.swift  SingletonManager.swift
tray/darwin/Tests/: IdentityManagerTests.swift
tray/linux/: BUILD.bazel  Makefile  go.mod  main.go  main_test.go
(+184 files in other folders)
