[package]
name = "remote-juggler-gui"
version = "2.2.0"
edition = "2021"
description = "GTK4/Libadwaita GUI for RemoteJuggler identity management"
authors = ["Jess Sullivan <jess@sulliwood.org>"]
license = "Zlib"
repository = "https://gitlab.com/tinyland/projects/remote-juggler"
keywords = ["git", "identity", "gnome", "gtk4"]
categories = ["development-tools", "gui"]

[dependencies]
# GTK4 and Libadwaita for native GNOME experience
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = "0.7"

# Serialization for config parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# XDG directories for config paths
dirs = "6.0"

[dev-dependencies]
proptest = "1.4"
proptest-derive = "0.4"
tempfile = "3.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
